<resources>
    <string name="app_name" translatable="false">AppSolution</string>
    <string name="txt_cancel">Zurück</string>
    <string name="btd_cocktail_overview_text" translatable="false">Cocktails</string>
    <string name="cocktails_rum" translatable="false">Rum</string>
    <string name="cubaLibre" translatable="false">Cuba Libre</string>
    <string name="mojito" translatable="false">Mojito</string>
    <string name="plantersPunch" translatable="false">Planter\'s Punch</string>
    <string name="wastedTime" translatable="false">Wasted Time</string>
    <string name="zombie" translatable="false">Zombie</string>
    <string name="cocktails_tequila" translatable="false">Tequila</string>
    <string name="tequilaSunrise">Tequila Sunrise</string>
    <string name="margarita" translatable="false">Margarita</string>
    <string name="cocktails_wodka">Wodka</string>
    <string name="aphroditesKiss" translatable="false">Aphrodite\'s Kiss</string>
    <string name="blackRussian" translatable="false">Black Russian</string>
    <string name="bloodyMary" translatable="false">Bloody Mary</string>
    <string name="harveyWallbanger" translatable="false">Harvey Wallbanger</string>
    <string name="longIslandIceTea" translatable="false">Long Island Ice Tea</string>
    <string name="sexOnTheBeach">Sex on the beach</string>
    <string name="swimmingPool">Swimming Pool</string>
    <string name="touchdown">Touchdown</string>
    <string name="whiteRussian" translatable="false">White Russian</string>
    <string name="wodkaSunrise" translatable="false">Wodka Sunrise</string>
    <string name="maiTai" translatable="false">Mai Tai</string>
    <string name="ginFizz" translatable="false">Gin Fizz</string>
    <string name="cocktails_licor43" translatable="false">Licor 43</string>
    <string name="blanco43" translatable="false">Blanco 43</string>
    <string name="sour43">Sour 43</string>
    <string name="txt_cachaca" translatable="false">Cacha&#231;a</string>
    <string name="caipirinha" translatable="false">Caipirinha</string>
    <string name="title_activity_cocktail_overview">Cocktails</string>
    <string name="title_activity_cocktail_recipe">Cocktail Rezept</string>
    <string name="title_ingredients">Zutaten</string>
    <string name="title_preparation">Zubereitung</string>
    <string name="txt_limette">Limette</string>
    <string name="txt_cola">Cola</string>
    <string name="txt_weisser_rum">weißer Rum</string>
    <string name="txt_minzblaetter">Minzblätter</string>
    <string name="txt_rohrzucker">Rohrzucker</string>
    <string name="txt_weisser_rohrzucker">weißer Rohrzucker</string>
    <string name="txt_brauner_Rohrzucker">brauner Rohrzucker</string>
    <string name="txt_zuckersirup">Zuckersirup</string>
    <string name="txt_sodawasser">Sodawasser</string>
    <string name="txt_orangensaft">Orangensaft</string>
    <string name="txt_ananassaft">Ananassaft</string>
    <string name="txt_zitronensaft">Zitronensaft</string>
    <string name="txt_brauner_Rum">brauner Rum</string>
    <string name="txt_grenadinesirup">Grenadinesirup</string>
    <string name="txt_maracujsaft">Maracujasaft</string>
    <string name="txt_limettensaft">Limettensaft</string>
    <string name="txt_johannisbeersaft_schwarz">Johannisbeersaft (schwarz)</string>
    <string name="txt_pfirsichsaft">Pfirsichsaft</string>
    <string name="txt_tomatensaft">Tomatensaft</string>
    <string name="txt_prise_salz">Prise Salz</string>
    <string name="txt_prise_pfeffer">Prise Pfeffer</string>
    <string name="txt_spritzer_tabasco">Spritzer Tabasco</string>
    <string name="txt_worcestersauce" translatable="false">Worcestersauce</string>
    <string name="txt_pfirsichlikoer">Pfirsichlikör</string>
    <string name="txt_cranberrysirup">Cranberrysirup</string>
    <string name="txt_kokosnusscreme">Kokosnusscreme</string>
    <string name="txt_sahne">Sahne</string>
    <string name="txt_blue_curacao" translatable="false">Blue Curacao</string>
    <string name="txt_milch">Milch</string>
    <string name="txt_limettensirup">Limettensirup</string>
    <string name="txt_mandelsirup">Mandelsirup</string>
    <string name="txt_ginger_ale" translatable="false">Ginger Ale</string>
    <string name="txt_spritzer_worcestershire">Spritzer Worcestershire</string>
    <string name="txt_cocktail_cuba_libre_prep">Limette achteln, in ein Glas geben und ausdrücken. Rum dazu geben und umrühren. Anschließend Eiswürfel ins Glas geben und mit Cola auffüllen.</string>
    <string name="txt_cocktail_mojito_prep">Die Limette vierteln und mit den Minzblättern sowie dem Rohrzucker in ein Glas geben und mit dem Barlöffel leicht andrücken. Rum und Limettensaft dazugeben und mit reichlich Crushed Ice verrühren. Anschließend mit Sodawasser aufgießen.</string>
    <string name="txt_cocktail_planterspunch_prep">Limetten- und Orangensaft in den Shaker geben, einmal kurz umrühren und dann mit Zuckersirup nach Belieben Süßen. Rum und Eiswürfel hinzufügen und alles kräftig schütteln, bis der Shaker außen beschlägt. Durch ein Sieb in ein Longdrinkglas abseihen und mit dem Soda- oder Mineralwasser verlängern.</string>
    <string name="txt_cocktail_wasted_time_prep">Zutaten mit 3 Eiswürfeln im Shaker durchschütteln und in ein Longdrinkglas abseihen.</string>
    <string name="txt_cocktail_tequila_sunrise_prep">Tequila, Orangen- und Zitronensaft mit Eiswürfeln im Shaker gut schütteln und in ein mit Eis gefülltes Longdrinkglas abseihen. Grenadinesirup langsam darüber laufen lassen.</string>
    <string name="txt_cocktail_margarita_prep">Cocktailglas mit Salzrand versehen und vorkühlen. Zutaten in einen Shaker geben und gut schütteln. Inhalt ins Glas seihen.</string>
    <string name="txt_cocktail_aphrodites_kiss_prep">Alle Zutaten mit 3&#8211;4 Eiswürfeln shaken. Grenadinesirup darüber gießen.</string>
    <string name="txt_cocktail_black_russian_prep">In einen kleinen Tumbler mit Eiswürfeln erst Kahlúa und dann Wodka geben.</string>
    <string name="txt_cocktail_bloody_mary_prep">Alle Zutaten mit einigen Eiswürfeln im Shaker kräftig mixen. In ein Longdrinkglas oder Tumbler mit einigen Eiswürfeln abseihen.</string>
    <string name="txt_cocktail_harvey_wallbanger_prep">Wodka und Orangensaft in ein Longdrinkglas mit viel Eis geben. Galliano vorsichtig aufschwimmen lassen.</string>
    <string name="txt_cocktail_long_island_ice_tea_prep">Alle Zutaten, außer Cola und Ginger Ale, mit Eiswürfeln im Shaker schütteln. In ein Longdrinkglas mit reichlich Eiswürfeln abseihen.</string>
    <string name="txt_cocktail_sex_on_the_beach_prep">Alle Zutaten shaken und in ein Glas mit Eiswürfeln geben.</string>
    <string name="txt_cocktail_swimming_pool_prep">Alle Zutaten bis auf Blue Curacao mit etwas crushed Ice aufmixen und in ein Glas mit crushed Ice abseihen. Blue Curacao vorsichtig ins Glas laufen lassen.</string>
    <string name="txt_cocktail_touch_down_prep">Alle Zutaten shaken und auf 3 Eiswürfel abseihen. Grenadinesirup darüber gießen.</string>
    <string name="txt_cocktail_white_russian_prep">Wodka, Kaffeelikör und einige Eiswürfel in ein Glas geben und gut vermischen. Sahne leicht anschlagen und vorsichtig über den Drink geben.</string>
    <string name="txt_cocktail_wodka_sunrise_prep">Eiswürfel ins Glas geben. Mit Wodka und Orangensaft auffüllen und anschließend Grenadinesirup darüber laufen lassen.</string>
    <string name="txt_cocktail_sour_43_prep">Alle Zutaten auf Eis shaken und mit Eis servieren.</string>
    <string name="txt_cocktail_caipirinha_prep">Limette schneiden und ins Glas geben. Zucker zugeben und mit einem Stößel den Saft aus der Limette drücken. Das Glas mit Eis auffüllen und Cachaca darüber geben. Alles sehr gut verrühren.</string>
    <string name="txt_cocktail_mai_tai_prep">Alle Zutaten im Shaker mit einigen Eiswürfeln kurz durchschütteln und in ein zu einem Drittel mit crushed Ice gefülltes Glas abseihen. Garnieren und mit Trinkhalm servieren.</string>
    <string name="txt_cocktail_gin_fizz_prep">Gin, Zitronensaft und Zuckersirup im Shaker mit einigen Eiswürfeln gut schütteln. In ein Glas mit Eiswürfeln abseihen und anschließend mit Sodawasser aufgießen.</string>
    <string name="txt_cocktail_blanco_43_prep">Den Licor 43 in ein Longdrinkglas mit Eiswürfeln geben. Danach mit Milch aufgießen und umrühren.</string>
    <string name="txt_cocktail_alert_msg_not_found">Kein Cocktail gefunden. Kontaktien Sie den Entwickler!</string>
    <string name="txt_malibu" translatable="false">Malibu</string>
    <string name="txt_weisser_tequila">weißer Tequila</string>
    <string name="txt_cointreau" translatable="false">Cointreau</string>
    <string name="txt_wodka" translatable="false">Wodka</string>
    <string name="txt_kahlua" translatable="false">Kahlúa</string>
    <string name="txt_galliano" translatable="false">Galliano</string>
    <string name="txt_tequila" translatable="false">Tequila</string>
    <string name="txt_triple_sec" translatable="false">Triple Sec</string>
    <string name="txt_gin" translatable="false">Gin</string>
    <string name="txt_apricot_brandy" translatable="false">Apricot Brandy</string>
    <string name="txt_licor_43" translatable="false">Licor 43</string>
    <string name="title_activity_mensa_speiseplan">Mensa Regensburg</string>
    <string name="btd_mensa_text" translatable="false">Mensa</string>
    <string name="title_activity_about_screen">Über AppSolution</string>
    <string name="about_text_app_name" translatable="false">AppSolution</string>
    <string name="about_text_version" translatable="false">Version 2.0.1</string>
    <string name="about_developer">Entwickelt von Mathias Ferstl</string>
    <string name="about_thanks" translatable="false">Icons made by Freepik from www.flaticon.com</string>
    <string name="txt_about_darkSkyAPI_attribution">Wetterdaten: <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a></string>
    <string name="txt_about_icon_credits" translatable="false">Icon credits</string>
    <string name="txt_about_icon_credits_dialog_title">Gehe zu &#8230;</string>
    <string name="txt_about_icon_credits_dialog_author">Autor</string>
    <string name="txt_about_icon_credits_dialog_source">Titel</string>
    <string name="reyn_values_title">Wählen Sie hier die Temperatur des Fluids</string>
    <string name="reyn_txtv_water">Wasser (bei 1 bar)</string>
    <string name="reyn_txtv_air">Luft</string>
    <string name="reyn_0deg" translatable="false">0°C</string>
    <string name="reyn_10deg" translatable="false">10°C</string>
    <string name="reyn_20deg" translatable="false">20°C</string>
    <string name="reyn_30deg" translatable="false">30°C</string>
    <string name="reyn_50deg" translatable="false">50°C</string>
    <string name="reyn_70deg" translatable="false">70°C</string>
    <string name="reyn_90deg" translatable="false">90°C</string>
    <string name="reyn_txtv_laminar_flow_krit">Re &#60; 2300: laminare Strömung</string>
    <string name="reyn_txtv_turbulent_flow_krit">Re &#62; 2300: turbulente Strömung</string>
    <string name="txte_currency_value_hint">Betrag</string>
    <string name="btd_currency_calc">Umrechnen</string>
    <string name="txtv_currency_intro">Eine Internetverbindung ist erforderlich!</string>
    <string name="txtv_currency_internet_status">Keine Internetverbindung!</string>
    <string name="txtv_currency_from">Ausgangswährung</string>
    <string name="txtv_currency_to">Zielwährung</string>
    <string name="desc_kangaroo_button" translatable="false">Kangaroo Button</string>
    <string name="alert_choose_language">Sprache wählen</string>
    <string name="btd_ok" translatable="false">OK</string>
    <string name="rbtd_german">Deutsch</string>
    <string name="rbtd_english">Englisch</string>
    <string name="hint_filter_cities">Orte filtern &#8230;</string>
    <string name="title_add_city">Stadt hinzufügen &#8230;</string>
    <string name="btn_dismiss">Schließen</string>
</resources>