<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_reyn_uv"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5pt"
    android:paddingLeft="5pt"
    android:paddingRight="5pt"
    android:paddingBottom="5pt"
    android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reyn_values_title"
        android:textSize="@dimen/material_text_title"
        android:textColor="@color/colorTextPrimary"
        android:textAlignment="center"
        android:paddingBottom="15pt"/>
    <TextView
        android:id="@+id/reyn_txtv_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/reyn_txtv_water"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/material_text_title" />
    <TableLayout
        android:layout_width="130pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <TableRow>
            <Button
                android:id="@+id/reyn_water_10deg"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:text="@string/reyn_10deg"
                android:textSize="@dimen/material_text_button"
                android:textAllCaps="false"
                style="@style/AppTheme.Button"/>
            <Button
                android:id="@+id/reyn_water_20deg"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:text="@string/reyn_20deg"
                android:textSize="@dimen/material_text_button"
                android:textAllCaps="false"
                style="@style/AppTheme.Button"/>
            <Button
                android:id="@+id/reyn_water_30deg"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:text="@string/reyn_30deg"
                android:textSize="@dimen/material_text_button"
                android:textAllCaps="false"
                style="@style/AppTheme.Button"/>
        </TableRow>
        <TableRow>
        <Button
            android:id="@+id/reyn_water_50deg"
            android:layout_width="0pt"
            android:layout_weight="1"
            android:text="@string/reyn_50deg"
            android:textSize="@dimen/material_text_button"
            android:textAllCaps="false"
            style="@style/AppTheme.Button"/>
        <Button
            android:id="@+id/reyn_water_70deg"
            android:layout_width="0pt"
            android:layout_weight="1"
            android:text="@string/reyn_70deg"
            android:textSize="@dimen/material_text_button"
            android:textAllCaps="false"
            style="@style/AppTheme.Button"/>
        <Button
            android:id="@+id/reyn_water_90deg"
            android:layout_width="0pt"
            android:layout_weight="1"
            android:text="@string/reyn_90deg"
            android:textSize="@dimen/material_text_button"
            android:textAllCaps="false"
            style="@style/AppTheme.Button"/>
    </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5pt"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/reyn_txtv_air"
        android:textSize="@dimen/material_text_title"
        android:textColor="@color/colorTextPrimary"/>
    <TableLayout
        android:layout_width="130pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <TableRow>
            <Button
                android:id="@+id/reyn_air_0deg"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:text="@string/reyn_0deg"
                android:textSize="@dimen/material_text_button"
                android:textAllCaps="false"
                style="@style/AppTheme.Button"/>
        </TableRow>
    </TableLayout>
</LinearLayout>