<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:orientation="vertical"
    tools:context="mfdevelopement.appsolution.activities.AboutActivity">

    <ImageView
        android:layout_width="40pt"
        android:layout_height="40pt"
        android:id="@+id/app_icon"
        android:layout_gravity="center"
        android:src="@drawable/ic_appsolution_logo">
    </ImageView>

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5pt"
        android:paddingBottom="5pt"
        android:gravity="center"
        android:text="@string/about_text_app_name"
        android:textSize="@dimen/material_text_title"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary">
    </TextView>

    <TextView
        android:id="@+id/tv_about_versionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/material_text_body1"
        android:text="@string/about_text_version"
        android:textColor="@color/colorTextPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5pt"
        android:gravity="center"
        android:textSize="@dimen/material_text_body1"
        android:text="@string/about_developer"
        android:textColor="@color/colorTextPrimary">
    </TextView>

    <Button
        android:id="@+id/btn_about_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.FlatButton"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/activity_single_space"
        android:text="@string/txt_about_icon_credits"
        android:paddingLeft="@dimen/activity_single_space"
        android:paddingRight="@dimen/activity_single_space"
        android:textSize="@dimen/material_text_body1"
        android:textAllCaps="false">
    </Button>

    <TextView
        android:id="@+id/txtv_about_darkSkyAPI_attribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/material_text_body1"
        android:text="@string/txt_about_darkSkyAPI_attribution"
        android:layout_marginTop="@dimen/activity_single_space"
        android:paddingTop="@dimen/activity_single_space"
        android:paddingBottom="@dimen/activity_single_space">
    </TextView>

</LinearLayout>
