<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin_lay_dia_weather_add_city"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="5pt"
    android:paddingLeft="10pt"
    android:paddingStart="10pt"
    android:paddingRight="10pt"
    android:paddingEnd="10pt"
    android:paddingBottom="5pt">
    <TextView
        android:id="@+id/tv_dia_weather_add_city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_city"
        android:textSize="@dimen/material_text_title"
        android:textColor="@color/colorAccent"
        android:paddingBottom="@dimen/activity_single_space" />
    <EditText
        android:id="@+id/et_dia_weather_add_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_filter_cities"
        android:singleLine="true"/>
    <ListView
        android:id="@+id/lv_weather_cities"
        android:layout_width="match_parent"
        android:layout_height="450dp">
    </ListView>
    <Button
        android:id="@+id/btn_dia_weather_add_city_dismiss"
        android:layout_width="30pt"
        android:layout_height="wrap_content"
        android:text="@string/btn_dismiss"
        android:textSize="@dimen/material_text_button"
        style="@style/AppTheme.FlatButton"
        android:layout_gravity="end"/>
</LinearLayout>